# amex-default-prediction

./: .gitignore  README.md  environment.yml  environment_gpu.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codestyle.yml  tests.yml
amex-default-prediction/data/raw_data/: download.py
amex_default_prediction/: __init__.py  __main__.py
amex_default_prediction/data/: __init__.py
amex_default_prediction/data/load/: train_data.py
amex_default_prediction/data/raw_data/: download.py  make_dummy_data.py  sha512sums.txt
amex_default_prediction/models/simplest/: base.py
data/raw_data/: download.py
